Mention users in ReminderRunnable