@@ -5,11 +5,12 @@ import io.banditoz.mchelper.commands.logic.CommandUtils;
 import io.banditoz.mchelper.utils.database.Reminder;
 import io.banditoz.mchelper.utils.database.dao.RemindersDao;
 import io.banditoz.mchelper.utils.database.dao.RemindersDaoImpl;
+import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 import net.dv8tion.jda.api.utils.messages.MessageCreateBuilder;
 import org.slf4j.LoggerFactory;
 
-import java.util.Collections;
+import java.util.List;
 
 public class ReminderRunnable implements Runnable {
     private final Reminder R;
@@ -31,7 +32,7 @@ public class ReminderRunnable implements Runnable {
             if (dao.isStillActiveOrNotDeleted(R.getId())) {
                 if (!R.isFromDm()) {
                     TextChannel tc = MCHELPER.getJDA().getTextChannelById(R.getChannelId());
-                    tc.sendMessage(new MessageCreateBuilder().setContent(format(R)).setAllowedMentions(Collections.emptyList()).build()).queue();
+                    tc.sendMessage(new MessageCreateBuilder().setContent(format(R)).setAllowedMentions(List.of(Message.MentionType.USER)).build()).queue();
                 }
                 else {
                     MCHELPER.getJDA().retrieveUserById(R.getAuthorId()).complete().openPrivateChannel().complete().sendMessage(format(R)).queue();
